--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Introduction to the DOM Lab</title>
+  </head>
+  <body>
+      <h1>My HTML adventure</h1>
+      <p>
+        We're writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to
+        display in our <strong>browser</strong>.
+        We're basically telling computers what to do. <em>Neat!</em>
+      </p>
+      <table>
+          <thread>
+              <tr>
+                  <th>Element name</th>
+                  <th>Display value</th>
+              </tr>
+          </thread>
+            <tbody>
+                <tr>
+                    <td>h1</td>
+                    <td>block</td>
+                </tr>
+                <tr>
+                    <td>pc</td>
+                    <td>block</td>
+                </tr>
+                <tr>
+                    <td>strong</td>
+                    <td>inline</td>
+                </tr>
+                <tr>
+                    <td>em</td>
+                    <td>inline</td>
+                </tr>
+            </tbody>
+      </table>
+      <!--<h1>My HTML adventure</h1>
+        <p><strong><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">Hello</a> <em>fellow</em> humans!</strong></p>
+        <table></table>-->
+  </body>
+</html>
